# aesynx

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml
boot/qemu/: limine.conf  stage0.toml
crates/aesynx-abi/: Cargo.toml
crates/aesynx-abi/src/: lib.rs
crates/aesynx-ai-policy/: Cargo.toml
crates/aesynx-ai-policy/src/: confidence.rs  lib.rs  manifest.rs  policy.rs  schedule.rs
crates/aesynx-arch/: Cargo.toml
crates/aesynx-arch-aarch64/: Cargo.toml
crates/aesynx-arch-aarch64/src/: lib.rs
crates/aesynx-arch-x86_64/: Cargo.toml
crates/aesynx-arch-x86_64/src/: cpu_hardening.rs  descriptors.rs  entropy.rs  exceptions.rs  interrupts.rs  lib.rs  port.rs  registers.rs  serial.rs  timer.rs
crates/aesynx-arch-x86_64/src/cpu_hardening/: cpuid.rs  tests.rs
crates/aesynx-arch-x86_64/src/exceptions/: frame.rs  idt.rs  tests.rs
crates/aesynx-arch/src/: lib.rs
crates/aesynx-boot/: Cargo.toml
crates/aesynx-boot/src/: fuzz.rs  lib.rs  normalize.rs  types.rs
crates/aesynx-bytecode/: Cargo.toml
crates/aesynx-bytecode/src/: lib.rs
crates/aesynx-cap/: Cargo.toml
crates/aesynx-cap/src/: capability.rs  derivation.rs  id.rs  kind.rs  lib.rs  memory.rs  perms.rs  revocation.rs  table.rs
crates/aesynx-core/: Cargo.toml
crates/aesynx-core/src/: barrier.rs  capabilities.rs  lib.rs  local.rs  registry.rs  role.rs  startup.rs  startup_preflight.rs  startup_state.rs  tests.rs  topology.rs
crates/aesynx-device/: Cargo.toml
crates/aesynx-device/src/: lib.rs
crates/aesynx-entropy/: Cargo.toml
crates/aesynx-entropy/src/: lib.rs
crates/aesynx-ipc/: Cargo.toml
crates/aesynx-ipc/src/: core_set.rs  fabric.rs  lib.rs  service.rs  service_queue.rs  service_tests.rs
crates/aesynx-kernel/: Cargo.toml
crates/aesynx-kernel/src/: ai_policy_smoke.rs  amp_core_smoke.rs  capability_ipc_report.rs  capability_ipc_smoke.rs  capability_smoke.rs  concurrency_smoke.rs  cooperative_sched_smoke.rs  diagnostics.rs  early_heap.rs  entropy_smoke.rs  execution_smoke.rs  frame_allocator_smoke.rs  ipc_pingpong_smoke.rs  kernel_mapping_policy.rs  kernel_mapping_smoke.rs  kernel_sections.rs  lib.rs  limine.rs  main.rs  multicore_topology_smoke.rs  page_table_install.rs  page_table_smoke.rs  scheduler_telemetry_smoke.rs  service_queue_smoke.rs  smoke_modules.rs  task_smoke.rs  telemetry_events_smoke.rs  timer_smoke_entry.rs
crates/aesynx-kernel/src/diagnostics/: panic.rs
crates/aesynx-kernel/src/kernel_heap/: allocator.rs  allocator_helpers.rs  backing.rs  free_list.rs  global_alloc.rs  layout.rs  lock.rs  mod.rs  stats.rs  test_support.rs  tests.rs
crates/aesynx-kernel/src/limine/: abi.rs  tests.rs
crates/aesynx-log/: Cargo.toml
crates/aesynx-log/src/: lib.rs
crates/aesynx-mm/: Cargo.toml
crates/aesynx-mm/src/: frame_allocator.rs  kernel_policy.rs  lib.rs  page_table.rs
crates/aesynx-object/: Cargo.toml
crates/aesynx-object/src/: lib.rs  registry.rs  tests.rs  types.rs
crates/aesynx-platform/: Cargo.toml
crates/aesynx-platform/src/: lib.rs
crates/aesynx-rt/: Cargo.toml
crates/aesynx-rt/src/: lib.rs
crates/aesynx-sched/: Cargo.toml
crates/aesynx-sched/src/: executor.rs  executor_tests.rs  lib.rs  queue.rs  task.rs  tests.rs
crates/aesynx-shell/: Cargo.toml
crates/aesynx-shell/src/: lib.rs
crates/aesynx-sync/: Cargo.toml
crates/aesynx-sync/src/: lib.rs  tests.rs
crates/aesynx-telemetry/: Cargo.toml
crates/aesynx-telemetry/src/: event.rs  lib.rs  scheduler.rs
crates/aesynx-time/: Cargo.toml
crates/aesynx-time/src/: lib.rs
docs/: ARCHITECTURE_DECISIONS.md  IMPLEMENTATION_PLAN.md  RELEASE_PLAN.md  bootinfo-normalization.md  bootloader-roadmap.md  build-skeleton.md  concurrency-policy.md  driver-roadmap.md  early-diagnostics.md  first-serial-boot.md  hosted-execution-roadmap.md  initial-idea.md  kernel-engineering-policy.md  licensing.md  memory-model-roadmap.md  modularity-policy.md  multikernel-fabric-roadmap.md  os-world-roadmap.md  package-manager-roadmap.md  post-quantum-readiness.md  qemu-image-skeleton.md  sdk-roadmap.md  security-controls.md  storage-roadmap.md  supply-chain-security.md  telemetry-event-schema.md  threat-model.md  unsafe-policy.md  userspace-vision.md
docs/releases/: README.md  v0.1.0-rc.md  v0.10.0-rc.md  v0.11.0-rc.md  v0.12.0-rc.md  v0.13.0-rc.md  v0.14.0-rc.md  v0.15.0-rc.md  v0.16.0-rc.md  v0.16.1-rc.md  v0.16.2-rc.md  v0.16.3-rc.md  v0.16.4-rc.md  v0.17.0-rc.md  v0.18.0-rc.md  v0.18.1-rc.md  v0.19.0-rc.md  v0.2.0-rc.md  v0.20.0-rc.md  v0.21.0-rc.md  v0.22.0-rc.md  v0.23.0-rc.md  v0.24.0-rc.md  v0.25.0-rc.md  v0.26.0-rc.md  v0.27.0-rc.md  v0.28.0-rc.md  v0.29.0-rc.md  v0.3.0-rc.md  v0.30.0-rc.md  v0.31.0-rc.md  v0.32.0-rc.md  v0.33.0-rc.md  v0.33.1-rc.md  v0.34.0-rc.md  v0.35.0-rc.md  v0.35.1-rc.md  v0.35.2-rc.md  v0.35.3-rc.md  v0.35.4-rc.md  (+9 more)
linker/: kernel-x86_64.ld
models/aesynx-ipc-model/: Cargo.toml
models/aesynx-ipc-model/src/: completion.rs  lib.rs  ordering.rs  request.rs  ring.rs  service.rs  tests.rs
models/aesynx-object-model/: Cargo.toml
scripts/: check-doc-links.pl  checks.sh  generate-sbom.sh  rustc-workspace-wrapper.sh  validate-kernel-policy.sh  validate-modularity-policy.sh  validate-release-candidate-consistency.sh  validate-release-readiness-tests.sh  validate-release-readiness.sh  validate-security-policy.sh
security/pentest/: README.md  v0.1.0.md  v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.16.1.md  v0.16.3.md  v0.16.4.md  v0.17.0.md  v0.18.0.md  v0.18.1.md  v0.19.0.md  v0.2.0.md  v0.20.0.md  v0.21.0.md  v0.23.0.md  v0.24.0.md  v0.25.0.md  v0.26.0.md  v0.27.0.md  v0.29.0.md  v0.3.0.md  v0.30.0.md  v0.31.0.md  v0.32.0.md  v0.33.0.md  v0.33.1.md  v0.34.0.md  v0.35.0.md  v0.35.1.md  v0.35.2.md  v0.35.3.md  v0.35.4.md  v0.35.5.md  v0.36.0.md  v0.37.0.md  (+5 more)
targets/: x86_64-unknown-aesynx.json
tools/trace-decode/: Cargo.toml
tools/xtask/: Cargo.toml
(+85 files in other folders)
