[workspace]
members = []
resolver = "3"

[workspace.package]
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/eldryoth/aesynx"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
