[workspace]
members = [
    "crates/aesynx-abi",
    "crates/aesynx-ai-policy",
    "crates/aesynx-arch",
    "crates/aesynx-arch-aarch64",
    "crates/aesynx-arch-x86_64",
    "crates/aesynx-boot",
    "crates/aesynx-bytecode",
    "crates/aesynx-cap",
    "crates/aesynx-device",
    "crates/aesynx-entropy",
    "crates/aesynx-ipc",
    "crates/aesynx-kernel",
    "crates/aesynx-log",
    "crates/aesynx-mm",
    "crates/aesynx-object",
    "crates/aesynx-platform",
    "crates/aesynx-rt",
    "crates/aesynx-sched",
    "crates/aesynx-shell",
    "crates/aesynx-telemetry",
    "crates/aesynx-time",
    "models/aesynx-ipc-model",
    "models/aesynx-object-model",
    "tools/xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/eldryoth/aesynx"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
aesynx-abi = { path = "crates/aesynx-abi", version = "0.1.0" }
aesynx-ai-policy = { path = "crates/aesynx-ai-policy", version = "0.1.0" }
aesynx-arch = { path = "crates/aesynx-arch", version = "0.1.0" }
aesynx-boot = { path = "crates/aesynx-boot", version = "0.1.0" }
aesynx-bytecode = { path = "crates/aesynx-bytecode", version = "0.1.0" }
aesynx-cap = { path = "crates/aesynx-cap", version = "0.1.0" }
aesynx-device = { path = "crates/aesynx-device", version = "0.1.0" }
aesynx-entropy = { path = "crates/aesynx-entropy", version = "0.1.0" }
aesynx-ipc = { path = "crates/aesynx-ipc", version = "0.1.0" }
aesynx-ipc-model = { path = "models/aesynx-ipc-model", version = "0.1.0" }
aesynx-log = { path = "crates/aesynx-log", version = "0.1.0" }
aesynx-mm = { path = "crates/aesynx-mm", version = "0.1.0" }
aesynx-object = { path = "crates/aesynx-object", version = "0.1.0" }
aesynx-object-model = { path = "models/aesynx-object-model", version = "0.1.0" }
aesynx-platform = { path = "crates/aesynx-platform", version = "0.1.0" }
aesynx-rt = { path = "crates/aesynx-rt", version = "0.1.0" }
aesynx-sched = { path = "crates/aesynx-sched", version = "0.1.0" }
aesynx-shell = { path = "crates/aesynx-shell", version = "0.1.0" }
aesynx-telemetry = { path = "crates/aesynx-telemetry", version = "0.1.0" }
aesynx-time = { path = "crates/aesynx-time", version = "0.1.0" }
