[package]
name = "aesynx-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aesynx-abi.workspace = true
aesynx-arch.workspace = true
aesynx-arch-x86_64 = { path = "../aesynx-arch-x86_64", version = "0.1.0" }
aesynx-boot.workspace = true
aesynx-cap.workspace = true
aesynx-entropy.workspace = true
aesynx-ipc.workspace = true
aesynx-log.workspace = true
aesynx-mm.workspace = true
aesynx-sched.workspace = true
aesynx-telemetry.workspace = true
aesynx-time.workspace = true

[features]
default = []
exception-smoke = []
panic-smoke = []
smp = []
timer-smoke = []

[lints]
workspace = true
